--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "@keystonejs/fields": "^22.0.0",
     "@keystonejs/keystone": "^19.2.0",
     "cross-env": "^7.0.3"
+  },
+  "devDependencies": {
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.2"
   }
 }
